# GrisFramework

./: .gitignore  CMakeLists.txt  GRIS-Framework.sln  start_framework.bat
Modules/std/: ReadMe.txt  resource.h  std - Copy.vcxproj  std.vcxproj  std.vcxproj.filters
Modules/std/include/: DynamicPropertyManager.h  dynamicProperty.h
Modules/std/include/private/: std_api.h
Modules/std/source/: dllmain.cpp  dynamicProperty.cpp  std.cpp  stdafx.cpp
cmake/: BoostUtilities.cmake  BundleTarget.cmake  ConfigureResource.cmake  DebugCMake.cmake  DefineVersion.cmake  DependencyWalker.cmake  DeployAfter.cmake  FindIncPath.cmake  FindLOKI.cmake  GrisFrameworkConfig.cmake.in  GrisFrameworkConfigVersion.cmake.in  PugiUtilities.cmake  TargetAppendVersion.cmake  Version.cmake  bundle.cmake.in  clean_bundle.cmake.in  resource.rc.in
include/algorithm/: algorithm_api.h  clamp.h  dummy.h
include/gstd/: BaseVector.h  ContainerStreamOperators.h  DiscreteVector.h  DynamicPropertyException.h  DynamicPropertyManager.h  Exception.h  FieldVector.h  GrisFileLogger.h  IDynamicPropertyParser.h  IObservable.h  IObservableWithReturn.h  InvokeLater.h  JSONDynamicPropertyParser.h  Vector.h  VectorImpl.h  XmlAttribute.h  XmlDocument.h  XmlDynamicPropertyParser.h  XmlNode.h  dynamicProperty.h  dynamicPropertyTemplates.hxx  gstd_api.h  logger.h  resource.rc
include/gstd/private/: gris.pch
include/tests/testDynamicProperty/: TestClass.h  custom_streams.h  testDynamicPropertyManager.h  tests.h
include/tests/testInvoker/: testInvoker.h  tests.h
include/tests/testVector/: tests.h
include/tests/testXml/: tests.h
include/tests/testXml/private/: gris.pch  testXml.pch
property-sheets/: base.props
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  dummy.cpp
src/gstd/: CMakeLists.txt  DynamicProperty.cpp  DynamicPropertyException.cpp  DynamicPropertyTemplates.cpp  Exception.cpp  GrisFileLogger.cpp  IDynamicPropertyParser.cpp  JSONDynamicPropertyParser.cpp  Vector.cpp  XmlAttribute.cpp  XmlDocument.cpp  XmlDynamicPropertyParser.cpp  XmlNode.cpp  dynamicPropertyManager.cpp  logger.cpp  resource.rc
src/tests/: CMakeLists.txt
src/tests/testDynamicProperty/: CMakeLists.txt  TestClass.cpp  boostTestCase.cpp  main.cpp  testDynamicPropertyManager.cpp  tests.cpp
src/tests/testInvoker/: CMakeLists.txt  main.cpp  testInvoker.cpp  tests.cpp
src/tests/testLogger/: CMakeLists.txt  TestLogger_deploy.bat  testLogger.cpp
src/tests/testVector/: CMakeLists.txt  main.cpp  tests.cpp
src/tests/testXml/: CMakeLists.txt  TestXml_deploy.bat  main.cpp  testXml.cpp  tests.cpp
